--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,13 +1,10 @@
 {
-  "name": "ItSolutions",
+  "name": "roro92.github.io",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [
-      "scss",
-      "css"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -20,7 +17,15 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "scss/style.scss",
+      "imports": [
+        "scss/variables.scss",
+        "scss/mixins.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
@@ -63,7 +68,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7880,
+    "port": 7879,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
