--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,10 +1,13 @@
 {
-  "name": "roro92.github.io",
+  "name": "ItSolutions",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "scss",
+      "css"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -21,8 +24,8 @@
     {
       "path": "scss/style.scss",
       "imports": [
-        "scss/variables.scss",
-        "scss/mixins.scss"
+        "scss/_about.scss",
+        "scss/_contact.scss"
       ]
     }
   ],
@@ -68,7 +71,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7880,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
